# curly-giggle

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  imgui.ini
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: add-plot-type.prompt.md  add-signal-op.prompt.md  add-tool.prompt.md  fix-bug.prompt.md
.github/workflows/: docs.yml
cmake/: compiler_flags.cmake  deps.cmake  fastscope.icns
docs/: ARCHITECTURE.md  header.html
docs/pages/: 01_overview.md  02_user_manual.md  03_developer_manual.md  04_architecture.md
include/fastscope/: annotation_tool.hpp  app_state.hpp  application.hpp  axis_manager.hpp  collapsible_pane.hpp  color_manager.hpp  config.hpp  csv_exporter.hpp  derived_signal.hpp  error.hpp  file_open_dialog.hpp  ground_track_plot.hpp  hdf5_reader.hpp  interfaces.hpp  log.hpp  log_pane.hpp  operation_registry.hpp  plot_engine.hpp  plotted_signal.hpp  png_exporter.hpp  registry.hpp  ruler_tool.hpp  session.hpp  signal_buffer.hpp  signal_metadata.hpp  signal_ops.hpp  signal_tree_widget.hpp  simulation_file.hpp  simulation_list_ui.hpp  time_aligner.hpp  timeseries_plot.hpp  tool_manager.hpp  trajectory_2d_plot.hpp  ui_log_sink.hpp  version.hpp
include/gnc_viz/: annotation_tool.hpp  app_state.hpp  application.hpp  axis_manager.hpp  collapsible_pane.hpp  color_manager.hpp  config.hpp  csv_exporter.hpp  derived_signal.hpp  error.hpp  file_open_dialog.hpp  ground_track_plot.hpp  hdf5_reader.hpp  interfaces.hpp  log.hpp  operation_registry.hpp  plot_engine.hpp  plotted_signal.hpp  png_exporter.hpp  registry.hpp  ruler_tool.hpp  session.hpp  signal_buffer.hpp  signal_metadata.hpp  signal_ops.hpp  signal_tree_widget.hpp  simulation_file.hpp  simulation_list_ui.hpp  time_aligner.hpp  timeseries_plot.hpp  tool_manager.hpp  trajectory_2d_plot.hpp  version.hpp
src/app/: CMakeLists.txt  annotation_tool.cpp  application.mm  collapsible_pane.cpp  file_open_dialog.mm  ground_track_plot.cpp  log_pane.cpp  main.cpp  main.mm  plot_engine.cpp  ruler_tool.cpp  signal_tree_widget.cpp  simulation_list_ui.cpp  timeseries_plot.cpp  tool_manager.cpp  trajectory_2d_plot.cpp
src/lib/: CMakeLists.txt  axis_manager.cpp  color_manager.cpp  config.cpp  csv_exporter.cpp  derived_signal.cpp  error.cpp  hdf5_reader.cpp  log.cpp  operation_registry.cpp  png_exporter.cpp  session.cpp  signal_buffer.cpp  signal_metadata.cpp  signal_ops.cpp  simulation_file.cpp  time_aligner.cpp  ui_log_sink.cpp  version.cpp
src/tests/: CMakeLists.txt  test_app_state.cpp  test_axis_manager.cpp  test_color_manager.cpp  test_config.cpp  test_csv_exporter.cpp  test_derived_signal.cpp  test_error.cpp  test_hdf5_reader.cpp  test_infra.cpp  test_interfaces.cpp  test_log.cpp  test_registry.cpp  test_session.cpp  test_signal_buffer.cpp  test_signal_metadata.cpp  test_signal_ops.cpp  test_system.cpp  test_time_aligner.cpp  test_tool_manager.cpp
